# pretix-race

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
sample-responses/: sample_checkout_success_http200.html  sample_event_page.html  sample_event_page_no_marketplace.html  sample_marketplace_inactive.html  sample_no-tickets_http200.html  sample_successful_cart_add-output.txt  sample_ticket_type_a.html  sample_ticket_type_a_2.html  sample_ticket_type_b.html
src/pretix_race/: __init__.py  __main__.py  browser_handoff.py  config.py  handoff.py  monitor.py  parser.py  session.py  test_handoff.py
tests/: __init__.py  test_cart_add.py  test_cli.py  test_headless.py  test_lint.py  test_monitor.py  test_parser.py
